# food-manager

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  start.sh
.github/workflows/: python-app.yml
app/: main.py
app/static/scripts/: buttons.js
app/templates/: index.html
notebooks/: api_proto.ipynb
src/food_manager/: __init__.py  api.py
src/food_manager/db/: __init__.py  food_item.py
src/food_manager/schema/: food_item.py
src/food_manager_api/: api.py
src/food_manager_api/db/: __init__.py  base.py  utils.py
tests/: test_app.py  test_python_api.py
